# ocr-sandbox

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
tests/: test_app.py
