[project]
name = "typhoon-ocr"
version = "0.1.0"
description = "Modal-based Typhoon OCR CLI for images and PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "modal==1.3.4",
  "torch==2.7.1",
  "torchvision==0.22.1",
  "transformers==4.57.1",
  "accelerate==1.12.0",
  "Pillow==12.0.0",
  "pypdfium2==4.30.0",
  "huggingface_hub==0.36.0",
  "qwen-vl-utils==0.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
