[project]
name = "nemotron-ocr"
version = "0.1.0"
description = "Modal-based Nemotron OCR CLI for images and PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "modal==1.3.4",
  "torch==2.7.1",
  "torchvision==0.22.1",
  "transformers==4.57.1",
  "accelerate==1.12.0",
  "Pillow==12.0.0",
  "pypdfium2==4.30.0",
  "huggingface_hub==0.36.0",
  "timm",
  "open-clip-torch",
]

[dependency-groups]
dev = [
  "ruff==0.12.12",
  "mypy==1.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["app.py", "tests"]
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["modal", "modal.*", "pypdfium2", "pypdfium2.*", "transformers", "transformers.*", "mamba_ssm", "mamba_ssm.*"]
ignore_missing_imports = true
